ProductList 제작 & ProductList overflow issue 수정전
ProductList에서 화면 가로축을 넘어가는 이슈 발생

--- a/web/common/default.css
+++ b/web/common/default.css
@@ -42,3 +42,8 @@ table {
     border-spacing: 0;
 }
 
+body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #f8f8f8;
+}
